test/parser/fail/noexprlet.ang
f : Nat
f = 2 + 4 let a = 4 in                                  -- == 6